packages/core/scss/components/_buttons.scss
/*
 * SPDX-FileCopyrightText: 2022 Siemens AG
 *
 * SPDX-License-Identifier: MIT
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

@import './mixins/hover';
@import './mixins/text-truncation';

.btn {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  height: $x-large-space;
  font-size: $font-size-default;
  font-weight: $font-weight-bold;
  transition: $default-time;
  padding: 0 $small-space;
  min-width: 5rem;

  @include ellipsis;

  .glyph {
    margin-right: $tiny-space;
  }

  .glyph {
    font-weight: $font-weight-normal;
  }

  &:focus-visible,
  &.focus {
    box-shadow: none;
  }
}

$button-categories: (primary, secondary);

@mixin btn($name, $enable-border: true) {
  .btn-#{$name} {
    & {
      border-radius: var(--theme-btn--border-radius);
    }

    &,
    &.focus,
    &:focus-visible {
      background-color: var(--theme-btn-#{$name}--background);
      color: var(--theme-btn-#{$name}--color);

      @if $enable-border {
        border-width: var(--theme-btn--border-thickness);
        border-color: var(--theme-btn-#{$name}--border-color);
        border-style: solid;
      }
    }

    @include focus-visible {
      outline: 1px solid var(--focus--border-color);
      outline-offset: var(--theme-btn--focus--outline-offset);
    }

    &.selected {
      background-color: var(--theme-btn-#{$name}--background--selected);
    }

    &.hover,
    &:hover {
      @if $enable-border {
        border-color: var(--theme-btn-#{$name}--border-color--hover) !important;
      }

      background-color: var(--theme-btn-#{$name}--background--hover) !important;
      color: var(--theme-btn-#{$name}--color--hover) !important;
    }

    &.selected {
      &.hover,
      &:hover {
        background-color: var(--theme-btn-#{$name}--background--selected-hover);
        color: var(--theme-btn-#{$name}--color--selected-hover);
      }
    }

    &:not(:disabled):not(.disabled):active,
    &:not(:disabled):not(.disabled).active,
    .show > &.dropdown-toggle {
      @if $enable-border {
        border-color: var(
          --theme-btn-#{$name}--border-color--active
        ) !important;
      }

      background-color: var(
        --theme-btn-#{$name}--background--active
      ) !important;
      color: var(--theme-btn-#{$name}--color--active) !important;
    }

    &.selected {
      &:not(:disabled):not(.disabled):active,
      &:not(:disabled):not(.disabled).active,
      .show > &.dropdown-toggle {
        background-color: var(
          --theme-btn-#{$name}--background--selected-active
        );
        color: var(--theme-btn-#{$name}--color--selected-active);
      }
    }

    &.disabled,
    &:disabled {
      cursor: initial;

      @if $enable-border {
        border-color: var(--theme-btn-#{$name}--border-color--disabled);
      }

      background-color: var(--theme-btn-#{$name}--background--disabled);
      color: var(--theme-btn-#{$name}--color--disabled);
      opacity: 1;
    }
  }
}

@each $category in $button-categories {
  @include btn($category);
  @include btn('outline-#{$category}');
  @include btn('invisible-#{$category}', false);
}

.btn-oval,
.btn-icon {
  min-width: $x-large-space;
  width: $x-large-space;

  .glyph {
    margin-right: 0;
  }
}

.btn-oval {
  border-radius: 6.25rem;
  width: $default-control-height;
}

.btn-icon-xs {
  height: $default-space;
  width: $default-space;
  min-width: $default-space;
}

.btn-icon-s {
  height: $large-space;
  width: $large-space;
  min-width: $large-space;
}

